<resources>
    <string name="app_name">CarTracking</string>
    <string name="name">name</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="signin">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="update_entries">Update Entries</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="users">Users</string>
    <string name="fuels">Fuels</string>
    <string name="userPerson">User Person</string>
    <string name="amount">Amount</string>
    <string name="litres">Litres</string>
    <string name="date_dd_mm_yyyy">Date</string>
    <string name="fuelId">FuelId</string>
    <string name="Update">Update</string>
    <string name="id">ID</string>
    <string name="delete">Delete</string>
    <string name="delete_fuel">Delete</string>
    <string name="refresh">refresh</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps">Maps</string>
    <string name="tvText">Add Id For Location Tracking</string>
    <string name="daily_km_amount">Daily KM</string>
    <string name="daily_fuel_amount">Daily Fuel</string>
    <string name="today_places">Today\'s Places</string>
    <string name="yesterday_places">Yesterday\'s Places</string>
</resources>
