<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@mipmap/refresh"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_fuel"
        android:orderInCategory="104"
        app:showAsAction="collapseActionView"
        android:title="@string/daily_fuel_amount"/>
    <item
        android:id="@+id/action_today"
        android:orderInCategory="105"
        app:showAsAction="collapseActionView"
        android:title="@string/today_places"/>
    <item
        android:id="@+id/action_yesterday"
        android:orderInCategory="106"
        app:showAsAction="collapseActionView"
        android:title="@string/yesterday_places"/>

</menu>