<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usman.proretro.app.EditActivity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tvMsg"
    android:text="@string/update_entries"/>

    <EditText
        android:id="@+id/usera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/passworda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/namea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/emaila"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/email"
        android:inputType="text"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/button_bg"
        android:freezesText="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/update" />

</LinearLayout>