<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.usman.proretro.app.AddFuelActivity">

    <EditText
        android:id="@+id/etUserperson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/userPerson"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="textPersonName|number" />

    <EditText
        android:id="@+id/etLitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/litres"
        android:inputType="textPersonName|number" />

    <EditText
        android:id="@+id/dateFuel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/date_dd_mm_yyyy"
        android:inputType="textPersonName|date" />

    <Button
        android:id="@+id/btFuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/button_bg"
        android:layout_marginTop="30dp"
        android:text="@string/add" />

</LinearLayout>
